--- a/servicios.html
+++ b/servicios.html
@@ -9,47 +9,58 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Servicios | Pain Family Studio</title>
 </head>
-<body data-bs-theme="light" onload="mostrarFechaActual(), clima()" >
-  <header>
+<body data-bs-theme="light" id="body" >
+  <header> 
     <div class="container-fluid py-4" id="header">
-      <div class="row">
-        <div class="col-md-auto col-lg-auto px-0 mx-4">
-            <a class="navbar-brand mx-auto" href="#">
-              <img id="nav-logo" src="assets/img/logo.png" alt="Logo" width="50" height="50">
-            </a>
-        </div>
-        <div class="col-md-5 col-lg-6 ps-lg-0" id="header-title">
+      <div class="row"> <!-- Header -->
+        <div class="col-6"> <!-- Brand -->
           <div class="row">
-            <div class="col-12 mb-1">
-              <h3>Pain Family Studio</h3>
+            <div class="col-2 col-lg-1">
+              <a class="navbar-brand " href="index.html">
+                <img id="nav-logo" src="assets/img/logo.png" alt="logo">
+              </a>
             </div>
-            <div class="col-12">
-              <h6>Body Piercing - Joyería fina</h6>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-5  col-lg-3 mx-auto  me-1">
-          <div class="card mx-lg-auto pe-md-0 " id="widget-fecha">
-            <div class="card-body  pt-2">
-              <div class="row">
-                <div class="col-6">
-                  <div class="row">
-                    <div id="img-clima" class="col-md col-lg col-10"></div>
-                    <div id="info-clima" class="col-10"></div>
-                  </div>
+            <div class="col-9"> <!-- Encabezados -->
+              <div class="row row-cols-1" id="header-title">
+                <div class="col mb-1">
+                  <h3>Pain Family Studio</h3>
                 </div>
-                <div class="col-6 m-auto ">
-                  <h4 id="hora" class="card-title mb-0 mt-2"></h4>
-                  <p id="fecha" class="card-text"></p>
+                <div class="col">
+                  <h6>Body Piercing - Joyería fina</h6>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="col-5 col-lg-3 m-auto me-1"> <!-- Widget clima y fecha -->
+          <div class="card mw-50 w-auto" id="widget-fecha">
+            <div class="row">
+              <div class="col-6"> <!-- Clima -->
+                <div class="row">
+                  <div id="img-clima" class="col-4 my-auto"></div>
+                  <div class="col-8 pe-0">
+                    <div class="row row-cols-1">
+                      <div id="temperatura" class="col pt-3 pb-0"></div>
+                      <div id="descripcion-clima" class="col pt-0 mt-0"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Fecha y hora -->
+              <div class="col-6">
+                <div class="row row-cols-1"></div>
+                  <div id="hora" class="col text-center pt-2 pb-0"></div>
+                  <div id="fecha"  class="col text-center pt-0 mt-0"></div>
+                </div>
+              </div>
+            </div>
+          </div>  
+        </div>
       </div>
     </div>
+    <!-- NavBar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark text-white">
-      <div class="container-fluid">
+      <div class="container-fluid"> 
         <button id="btn-theme" class="btn rounded-fill"><i id="tema-icon" class="bi bi-moon-fill"></i></button>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -57,10 +68,10 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item ms-lg-2">
-              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item ms-lg-2">
-              <a class="nav-link" href="servicios.html">Servicios</a>
+              <a class="nav-link active"aria-current="page" href="servicios.html">Servicios</a>
             </li>
             <li class="nav-item ms-lg-2">
               <a class="nav-link" href="joyeria.html">Joyería</a>
@@ -80,8 +91,9 @@
      </div>
     </nav>
   </header> 
+
  <!--Card con imagen-->
-  <main>
+ <main class="main pb-4">
     <section class="card text-bg-dark" id="bg-img-page">
         <img src="assets/img/backgrounds/bg-overlay_2.png" class="card-img" alt="...">
         <div class="card-img-overlay">
@@ -140,79 +152,80 @@
         </div>
       </div>
     </section>
-</main>
+  </main>
 
-
-<footer class="footer text-light">
-  <div class="container" id="container-footer">
-    <div class="row">
-      <div class="col-md pr-md-5 mb-4 mb-md-0">
-        <div id="googleMap" style="width:100%;height:60%;"></div>
-        <ul class="list-unstyled quick-info mb-4">
-          <li>
-            <a href="#" class="d-flex align-items-center">
-              <span class="me-2"><i class="bi bi-telephone-fill"></i></span> +1 291 3912 329
-            </a>
-          </li>
-          <li>
-            <a href="#" class="d-flex align-items-center">
-              <span class="me-2"><i class="bi bi-envelope-fill"></i></span> info@gmail.com
-            </a>
+  <footer class="footer text-light">
+    <div class="container" id="container-footer">
+      <div class="row">
+        <div class="col-4 px-2 mb-4 mb-md-0 mx-auto">
+          <div id="googleMap" style="width:100%;height:60%;"></div>
+          <ul class="list-unstyled quick-info my-4">
+            <li>
+              <a href="#" class="d-flex align-items-center">
+                <span class="me-2"><i class="bi bi-whatsapp"></i></span> +56 9 6991 7034
+              </a>
             </li>
-        </ul>
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Ingresa tu correo electrónico" name="email_subscriptor">
-          <button class="btn btn-outline-black" type="button">Enviar</button>
+            <li>
+              <a href="#" class="d-flex align-items-center">
+                <span class="me-2"><i class="bi bi-geo-alt-fill"></i></span> Padre Mariano 82, of. 1202, Providencia.
+              </a>
+              </li>
+          </ul>
+          <!-- <div class="input-group">
+            <input type="text" class="form-control" placeholder="Ingresa tu correo electrónico" name="email_subscriptor">
+            <button class="btn btn-outline-black" type="button">Enviar</button>
+          </div> -->
         </div>
-      </div>
-      <div class="col-md pr-md-5 mb-4 mb-md-0" id="footer-nav">
-        <h4>Mapa del Sitio</h4> <!--Esto no sé si sera obligarotio en una web-->
-        <hr class="text warning">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="servicios.html">Servicios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="joyeria.html">Joyería</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="nosotros.html">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contacto.html">Contacto</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-md col-lg-3 pr-md-5 mb-md-0" id="instagram">
-        <h3>Instagram</h3>
-        <div class="row">
-          <div class="col-lg-6 col-md-5 pe-0 ">
-            <a href="https://www.instagram.com/p/Crvp4-RgDgX/?utm_source=ig_web_copy_link">
-              <img src="http://picsum.photos/150/150" alt="" class="img-fluid mb-1 me-lg-1 me-md-1">
-            </a>
-            <a href="">
-              <img src="http://picsum.photos/150/150" alt="" class="img-fluid  me-md-1">
-            </a>
-          </div>
-          <div class="col-lg-6 col-md-5 ps-0">
-            <a href="">
-              <img src="http://picsum.photos/150/150" alt="" class="img-fluid mb-1 me-lg-1 ms-md-1">
-            </a>
-            <a href="">
-              <img src="http://picsum.photos/150/150" alt="" class="img-fluid ms-md-1">
-            </a>
-          </div>
+        <div class="col-4 px-2 mb-4 mb-md-0 mx-auto" id="footer-nav">
+          <h4>Mapa del Sitio</h4> <!--Esto no sé si sera obligarotio en una web-->
+          <hr class="text warning">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="joyeria.html">Joyería</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
-      </div> 
+        <div class="col-md col-lg-3 px-2 mb-md-0 mx-auto" id="instagram">
+          <h3>Instagram</h3>
+          <div class="row">
+            <div class="col-lg-6 col-md-5 pe-0 ">
+              <a href="https://www.instagram.com/p/CsJfkJKu-Av/?utm_source=ig_embed&amp;utm_campaign=loading">
+                <img src="assets/img/footer/ig-img_1.jpg" alt="" class="img-footer img-fluid mb-1 me-lg-1 me-md-1">
+              </a>
+              <a href="https://www.instagram.com/p/CpPhQUZObXf/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
+                <img src="assets/img/footer/ig-img_2.jpg" alt="" class="img-footer img-fluid  me-md-1">
+              </a>
+            </div>
+            <div class="col-lg-6 col-md-5 ps-0">
+              <a href="https://www.instagram.com/p/CsRDwXyufTn/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
+                <img src="assets/img/footer/ig-img_3.jpg" alt="" class="img-fluid mb-1 me-lg-1 ms-md-1">
+              </a>
+              <a href="https://www.instagram.com/p/Cfgw6qpOjFb/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
+                <img src="assets/img/footer/ig-img_4.jpg" alt="" class="img-fluid ms-md-1">
+              </a>
+            </div>
+          </div>
+        </div> 
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="assets/js/funciones.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBt3ixABltNzmL_-1YiKKy2uKEksuLwnGI&callback=myMap"></script></body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="assets/js/funciones.js"></script>
+  <script src="assets/js/efectos.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBt3ixABltNzmL_-1YiKKy2uKEksuLwnGI&callback=myMap"></script>
+</body>
 </html>
